--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2005.00777"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Frontiers in Neuroscience</em>, 2021 (Accepted).
+    <em><br>arXiv preprint arXiv:2005.00777</em>, 2021.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
