--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am a first-year M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. I was an intern with the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in summer 2020. I always aim to use what I have learned to positively impact people's lives and find the courage to make life a blessing.
+  I am a first-year M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. I was an intern with the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in summer 2020. I always aim to use what I have learned to positively impact people's lives and find the courage to make life a blessing.
   <br />
   <br />
   
@@ -111,7 +111,7 @@
 <ul style="list-style:none; margin:0; padding:0">
 <!--  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>-->
   <li>
-    <strong>Dec 2021</strong> <a href="https://arxiv.org/abs/2005.00777"> One Paper</a> accepted by <em>Frontiers in Neuroscience</em>.
+    <strong>Dec 2021</strong> <a href="https://arxiv.org/abs/2005.00777"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
   </li>
   <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai.</li>
   <li>
@@ -153,11 +153,10 @@
       Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
-      <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Dynamic GNN Survey</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2005.00777"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>arXiv preprint arXiv:2005.00777</em>, 2021.
+    <em><br>Frontiers in Bioengineering and Biotechnology</em> (Accepted), 2021.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -245,6 +244,7 @@
       <em>arXiv preprint arXiv:2006.08924</em>, 2021.
     </div>
     <div style="float:right;">
+      <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Dynamic GNN Survey</a>
       <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2006.08924"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
