--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <ul style="list-style:none; margin:0; padding:0">
 <!--  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>-->
   <li>
-    <strong>Dec 2021</strong> <a href="https://arxiv.org/abs/2005.00777"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
+    <strong>Dec 2021</strong> <a href="https://www.frontiersin.org/articles/10.3389/fbioe.2021.706229/abstract"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
   </li>
   <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai.</li>
   <li>
