--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <li>
     <strong>Dec 2021</strong> <a href="https://www.frontiersin.org/articles/10.3389/fbioe.2021.706229/abstract"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
   </li>
-  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai.</li>
+  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai. (Supervisor: Dr. Shuang Zhou)</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
     a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification
@@ -144,7 +144,7 @@
       frameborder="0" scrolling="0" width="85px" height="20px">
     </iframe>.
   </li>
-<!--  <li><strong>Jun 2019</strong> Summer Intern at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing.</li>-->
+  <li><strong>Jun 2019</strong> Summer NLP Intern at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing. (Prof. Xiaoyan Zhu Team)</li>
 </ul>
 
 <!--Recent Publications-->
