--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <font color="#00066f">Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition</font>
     </div><br>
     <div style="float:left;">
-      Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
+      Yimin Hou, <strong>Shuyue Jia *</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
@@ -243,11 +243,11 @@
       </font>
     </div><br>
     <div style="float:left;">
-      Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
+      Yimin Hou, <strong>Shuyue Jia *</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <br>
     <div style="float:left;">
-      <em>arXiv preprint arXiv:2006.08924</em>, 2021.
+      <em>arXiv preprint arXiv:2006.08924</em>, 2022.
     </div>
     <div style="float:right;">
       <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Dynamic GNN Survey</a>
@@ -279,25 +279,29 @@
       </ul>
     </details>
   </li>
+    
+  <hr>
+  
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        Attention-based Graph ResNet for Motor Intent Detection from Raw EEG signals
+      </font>
+    </div><br>
+    <div style="float:left;">
+      <strong>Shuyue Jia *</strong>, Yimin Hou, Yan Shi, and Yang Li
+    </div>
+    <div style="float:right;">
+      <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
+      <a href="https://arxiv.org/abs/2007.13484"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div>
+    <em><br>arXiv preprint arXiv:2007.13484</em>, 2022.
+  </li>
+
 
 <!--  ####################################################################################################################################################-->
 <!--  <hr>-->
   
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">-->
-<!--    Attention-based Graph ResNet for Motor Intent Detection from Raw EEG signals-->
-<!--  </font>-->
-<!--</div><br>-->
-<!--<div style="float:left;">-->
-<!--  <strong>Shuyue Jia</strong>, Yimin Hou, Yan Shi, and Yang Li-->
-<!--</div>-->
-<!--<div style="float:right;">-->
-<!--  <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>-->
-<!--  <a href="https://arxiv.org/abs/2007.13484"><i class="fab fa fa-file-pdf-o"></i> Paper</a>-->
-<!--</div>-->
-<!--<em><br>arXiv preprint arXiv:2007.13484</em>, 2020.-->
-<!--  </li>-->
 
 <!--  ####################################################################################################################################################-->
 <!--  <hr>-->
