--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
+  I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, advised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
   
   <br />
   <br />
   
-  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
+  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
   
   <br />
   <br />
