--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <br />
   <br />
   
-  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
+  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
   
   <br />
   <br />
