--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <br />
   <br />
   
-  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
+  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
   
   <br />
   <br />
@@ -144,7 +144,7 @@
       frameborder="0" scrolling="0" width="85px" height="20px">
     </iframe>.
   </li>
-  <li><strong>Jun 2019</strong> Summer NLP Intern at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing. (Prof. Xiaoyan Zhu Team)</li>
+  <li><strong>Jun 2019</strong> Summer NLP Intern at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing.</li>
 </ul>
 
 <!--Recent Publications-->
