--- a/index.html
+++ b/index.html
@@ -298,52 +298,43 @@
     <em><br>arXiv preprint arXiv:2007.13484</em>, 2022.
   </li>
 
-
-<!--  ####################################################################################################################################################-->
-<!--  <hr>-->
+  <hr>
   
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        Improving Performance: a Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice
+      </font>
+    </div><br>
+    <div style="float:left;">
+      Yan Shi, Hangcheng Yuan, Chenao Xiong, <strong>Shuyue Jia</strong>, Jingjing Liu, and Hong Men
+    </div>
+    <div style="float:right;">
+      <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div>
+    <em><br>Sensors &amp; Actuators: B. Chemical</em>, 2021; 129546.
+  </li>
+  
+  <hr>
 
-<!--  ####################################################################################################################################################-->
-<!--  <hr>-->
-<!--	-->
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">-->
-<!--    Origin Traceability of Rice based on an Electronic Nose coupled with a Feature Reduction Strategy-->
-<!--    </font>-->
-<!--</div><br>-->
-<!--<div style="float:left;">-->
-<!--  Yan Shi, Xiaofei Jia, Hangcheng Yuan, <strong>Shuyue Jia</strong>, Jingjing Liu, and Hong Men-->
-<!--</div>-->
-<!--<div style="float:right;">-->
-<!--  <a href="https://iopscience.iop.org/article/10.1088/1361-6501/abb9e7/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>-->
-<!--  </div>-->
-<!--<em><br>Measurement Science and Technology</em>, 2020; 32(2):025107.-->
-<!--  </li>-->
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        Origin Traceability of Rice based on an Electronic Nose coupled with a Feature Reduction Strategy
+      </font>
+    </div><br>
+    <div style="float:left;">
+      Yan Shi, Xiaofei Jia, Hangcheng Yuan, <strong>Shuyue Jia</strong>, Jingjing Liu, and Hong Men
+    </div>
+    <div style="float:right;">
+      <a href="https://iopscience.iop.org/article/10.1088/1361-6501/abb9e7/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div>
+    <em><br>Measurement Science and Technology</em>, 2020; 32(2):025107.
+  </li>
 
-<!--  ####################################################################################################################################################-->
-<!--  <hr>-->
-<!--  -->
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">-->
-<!--    Improving Performance: a Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice-->
-<!--  </font>-->
-<!--</div><br>-->
-<!--	<div style="float:left;">-->
-<!--	Yan Shi, Hangcheng Yuan, Chenao Xiong, <strong>Shuyue Jia</strong>, Jingjing Liu, and Hong Men-->
-<!--</div>-->
-<!--<div style="float:right;">-->
-<!--  <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>-->
-<!--</div>-->
-<!--	<em><br>Sensors &amp; Actuators: B. Chemical</em>, 2021; 129546.-->
-<!--  </li>-->
+<hr>
 
-<!--  ####################################################################################################################################################-->
-<!--  <hr>-->
-</ol>
-
-<!--<ul><b>* denotes the Corresponding Author.</b></ul>-->
+</ol><ul><b>* denotes the Corresponding Author.</b></ul>
 
 <!--Academic Services-->
 <h2 id="Academic Services">Academic Services</h2>
