--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <br />
   <br />
   
-  My research interests mainly lie in Vision and Language, and my current concentration is Image Quality Assessment and Perceptual Optimization.
+  My research interests mainly lie in Computer Vision, and my current concentration is Image Quality Assessment and Perceptual Optimization.
   
   <br /> 
   <br />
