--- a/index.html
+++ b/index.html
@@ -115,10 +115,8 @@
 <h2 id="news">News</h2>
 
 <ul style="list-style:none; margin:0; padding:0">
-<!--  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>-->
   <li>
-    <strong>Dec 2021</strong> <a href="https://www.frontiersin.org/articles/10.3389/fbioe.2021.706229/abstract"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
-  </li>
+    <strong>Dec 2021</strong> <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.</li>
   <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai. (Supervisor: Dr. Shuang Zhou)</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
@@ -160,9 +158,9 @@
     </div>
     <div style="float:right;">
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
-      <a href="https://arxiv.org/abs/2005.00777"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Frontiers in Bioengineering and Biotechnology</em> (Accepted), 2021.
+    <em><br>Frontiers in Bioengineering and Biotechnology</em>, 2022.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -205,7 +203,7 @@
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
-    <em><br>Journal of Neural Engineering</em>, 2020; 17(1):016048.
+    <em><br>Journal of Neural Engineering</em>, 2020.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
