--- a/index.html
+++ b/index.html
@@ -459,6 +459,25 @@
     </details>
   </li>
   
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        3000-meter Steeplechase (The 45th NEEPU Games)
+      </font>
+    </div>
+    
+    <br>
+    
+    <details>
+      <summary style="outline:none">The Seventh Place</summary>
+      <div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/Steeplechase.jpg" alt="marathon-2017">
+        </div>
+      </div>
+    </details>
+  </li>
+  
 </ol>
 
 <br>
