--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <div style="float:right;">
       <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Sensors &amp; Actuators: B. Chemical</em>, 2021; 129546.
+    <em><br>Sensors &amp; Actuators: B. Chemical</em>, 2021.
   </li>
   
   <hr>
@@ -327,7 +327,7 @@
     <div style="float:right;">
       <a href="https://iopscience.iop.org/article/10.1088/1361-6501/abb9e7/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Measurement Science and Technology</em>, 2020; 32(2):025107.
+    <em><br>Measurement Science and Technology</em>, 2020.
   </li>
 
 <hr>
