--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp
   <a href="./CV-Latex/ShuyueJia-CV.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>&nbsp
+  <a href="./Chinese-Resume/ShuyueJia-Chinese-Resume.pdf"> <i class="fab fa fa-file-pdf-o"></i> 简历</a>&nbsp
   <a href="https://github.com/SuperBruceJia"><i class="fab fa fa-github"></i> GitHub</a> 
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>&nbsp
@@ -110,7 +111,7 @@
   <!--  <?php include 'css/citation_chart.php'; ?> -->
   <!--  &nbsp-->
 </p>
-  
+
 <!--Latest News-->
 <h2 id="news">News</h2>
 
@@ -492,7 +493,7 @@
 </body>
   
 <footer style="text-align:center">
-  Last update: Jun 9th, 2021<br>
+  Last update: Mar 27th, 2022<br>
   <span>Copyright &copy;2020 Shuyue Jia</span>
 </footer>
 
