--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <br>
     
     <details>
-      <summary style="outline:none">Half Marathon, placed 318 / 6000 (01:38:14)</summary>
+      <summary style="outline:none">Ranking of Half Marathon Race: 318 / 6000 (01:38:14)</summary>
       <div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/marathon2021.jpg" alt="marathon-2021">
@@ -451,7 +451,7 @@
     <br>
     
     <details>
-      <summary style="outline:none">Half Marathon, placed 148 / 4000 (01:47:36)</summary>
+      <summary style="outline:none">Ranking of Half Marathon Race: 148 / 4000 (01:47:36)</summary>
       <div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/marathon2017.jpg" alt="marathon-2017">
