--- a/index.html.tmp.html
+++ b/index.html.tmp.html
@@ -20,8 +20,8 @@
     </style>
     
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet" type="text/css">
-    <link rel="alternate" type="application/rss+xml" title="Shuyue Jia RSS" href="/feed.xml" />
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="alternate" type="application/rss+xml" title="Shuyue Jia RSS" href="file:///Volumes/Research/Personal_Files/Homepage/feed.xml" />
+    <link rel="stylesheet" href="file:///Volumes/Research/Personal_Files/Homepage/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
