--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <!--Web Title Shown-->
 <head>
-    <title>Bruce Shuyue Jia 贾舒越</title>
-	
+    <title>Shuyue Jia 贾舒越</title>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Shuyue Jia, Shuyue, shuyue, shuyue jia, jia shuyue, jiashuyue, 贾舒越, 舒越, 舒越贾, 贾 舒越, 舒越 贾, shuyu jia, jia shuyu, 舒, 越, 贾, 贾舒, 贾越, 贾 舒 越, SHUYUE JIA, SHUYUE, JIA SHUYUE, JIASHUYUE, SHU, YUE, JIA, JIASHU, JIA SHU, JIA SHU YUE, Bruce Jia, Bruce, Bruce Shuyue Jia, Bruce Shuyue, Bruce Shuyue JIA, SHUYUE JIA, SHUYUE, JIA SHUYUE, JIASHUYUE, SHU, YUE, JIA, JIASHU, JIA SHU, JIA SHU YUE">
@@ -12,7 +12,7 @@
     <meta name="description" content="This is Shuyue Jia's Homepage! Reference: Shuyue Jia, Shuyue, shuyue, shuyue jia, jia shuyue, jiashuyue, 贾舒越, 舒越, 舒越贾, 贾 舒越, 舒越 贾, shuyu jia, jia shuyu, 舒, 越, 贾, 贾舒, 贾越, 贾 舒 越, SHUYUE JIA, SHUYUE, JIA SHUYUE, JIASHUYUE, SHU, YUE, JIA, JIASHU, JIA SHU, JIA SHU YUE, Bruce Jia, Bruce, Bruce Shuyue Jia, Bruce Shuyue, Bruce Shuyue JIA, SHUYUE JIA, SHUYUE, JIA SHUYUE, JIASHUYUE, SHU, YUE, JIA, JIASHU, JIA SHU, JIA SHU YUE">
     <meta name="google-site-verification" content="UZ7grdeibwJYn35EsW-Yp0Ky7_vuMG45bHI1kki15H0" />
     <meta name="baidu-site-verification" content="WJpwHTPWUq" />
-
+  
     <style>
       div{
         line-height:28px;
@@ -35,7 +35,7 @@
 <!--Title-->
 <div class="wrapper">
 	<div class="navbar container">
-		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Bruce Shuyue Jia</a>
+		<a id="author-name" class="alignable pull-left" style="text-decoration:none">Shuyue Jia</a>
 		<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog"> Blog</a>
 	</div>
 
@@ -51,7 +51,7 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, advised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
+  I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, advised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by Prof. Yimin Hou.
   
   <br />
   <br />
@@ -61,11 +61,11 @@
   <br />
   <br />
   
-  My research interests mainly lie in Computer Vision, and my current concentration is Image Quality Assessment and Perceptual Optimization.
+  My research interests mainly lie in Computer Vision.
   
-  <br /> 
   <br />
-
+  <br />
+  
   Some of my paper survey and presentations can be found
 
   <br />
