--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, advised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by Prof. Yimin Hou.
+  I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, advised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by Prof. Yimin Hou and Dr. Jinglei Lv.
   
   <br />
   <br />
@@ -62,13 +62,8 @@
   <br />
   <br />
   
-  My research interests mainly lie in Computer Vision.
+  My research interests mainly lie in Computer Vision. Some of my paper survey and presentations can be found
   
-  <br />
-  <br />
-  
-  Some of my paper survey and presentations can be found
-
   <br />
   
   <details>
