--- a/index.html
+++ b/index.html
@@ -421,28 +421,28 @@
     </details>
   </li>
 
-  <li>
-    <div style="float:left;">
-      <font color="#00066f">
-        2018 Interdisciplinary Contest In Modeling
-      </font>
-    </div>
-
-    <div style="float:right;">
-      <a href="./files/ICM-2018.pdf"><i class="fab fa fa-file-pdf-o"></i> Thesis</a>
-    </div>
-    
-    <br>
-    
-    <details>
-        <summary style="outline:none">Successful Participant</summary>
-          <div>
-            <div style="text-align:center">
-              <img width="99%device-width" src="./imgs/ICM-2018.jpg" alt="ICM-2018">
-            </div>
-          </div>
-    </details>
-  </li>
+<!--  <li>-->
+<!--<div style="float:left;">-->
+<!--  <font color="#00066f">-->
+<!--    2018 Interdisciplinary Contest In Modeling-->
+<!--  </font>-->
+<!--</div>-->
+<!---->
+<!--<div style="float:right;">-->
+<!--  <a href="./files/ICM-2018.pdf"><i class="fab fa fa-file-pdf-o"></i> Thesis</a>-->
+<!--</div>-->
+<!---->
+<!--<br>-->
+<!---->
+<!--<details>-->
+<!--    <summary style="outline:none">Successful Participant</summary>-->
+<!--      <div>-->
+<!--        <div style="text-align:center">-->
+<!--          <img width="99%device-width" src="./imgs/ICM-2018.jpg" alt="ICM-2018">-->
+<!--        </div>-->
+<!--      </div>-->
+<!--</details>-->
+<!--  </li>-->
   
 <!--  <li>-->
 <!--<div style="float:left;">-->
