--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, advised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by Prof. Yimin Hou and Dr. Jinglei Lv.
+  I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
   
   <br />
   <br />
   
-  In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
+  I am currently an internship student at <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, supervised by Dr. Hui Zhang. In my undergraduate study, I interned at the medical NLP team at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai, and the NLP (Prof. Xiaoyan Zhu) Team at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
   
   <br />
   <br />
   
-  My research interests mainly lie in Computer Vision. Some of my paper survey and presentations can be found
+  My research interests mainly lie in Computer Vision. <br />
+  Some of my paper survey and presentations can be found
   
   <br />
   
