--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       frameborder="0" scrolling="0" width="85px" height="20px">
     </iframe>.
   </li>
-  <li><strong>Jun 2019</strong> Summer NLP Intern at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing.</li>
+<!--  <li><strong>Jun 2019</strong> Summer NLP Intern at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing.</li>-->
 </ul>
 
 <!--Recent Publications-->
