--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
   
   <br />
   <br />
-  
-  I am currently an internship student at <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing. In my undergraduate study, I interned at the NLP team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
+  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing and the NLP team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, Shanghai. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA.
   
   <br />
   <br />
