--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
         <li><a href="./files/PySpark-and-Horovod.pdf"> <i class="fab fa fa-file-pdf-o"></i> Big Data Parallel Processing by PySpark and Horovod Distributed Deep Learning</a></li>
         
     <p>Other Resources</p>
+    <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua JIA</a></li>
     <li><a href="./resources/How_to_Use_IEEEtran_LaTeX_Class.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Use the IEEEtran LaTeX Class</a></li>
     <li><a href="./files/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide</a></li>
     <li><a href="./files/台灣研究者最專業的學術英文.pdf"> <i class="fab fa fa-file-pdf-o"></i> 台灣研究者最專業的學術英文雜誌</a></li>
     <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
     <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
+    <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
     <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
     <li><a href="./resources/清华大学各院系重要国际学术会议目录_2018.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学各院系(学科)重要国际学术会议目录 (2018)</a></li>
     
