--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
     <p>Other Resources</p>
     <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua JIA</a></li>
     <li><a href="./resources/How_to_Use_IEEEtran_LaTeX_Class.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Use the IEEEtran LaTeX Class</a></li>
-    <li><a href="./resources/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide</a></li>
+    <li><a href="./resources/IEEE-Editing-Mathematics.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editing Mathematics Guide (Standard)</a></li>
+    <li><a href="./resources/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide (LaTex)</a></li>
+    <li><a href="./resources/IEEE-Reference-Guide-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Reference Guide (2021)</a></li>
+    <li><a href="./resources/IEEE-Editorial-Style-Manual-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editorial Style Manual (2021)</a></li>
     <li><a href="./resources/Taiwan_Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> 台灣研究者最專業的學術英文雜誌</a></li>
     <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
     <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
