--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <li><a href="./resources/How_to_Use_IEEEtran_LaTeX_Class.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Use the IEEEtran LaTeX Class</a></li>
     <li><a href="./resources/IEEE-Editing-Mathematics.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editing Mathematics Guide (Standard)</a></li>
     <li><a href="./resources/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide (LaTex)</a></li>
+    <li><a href="./resources/Formula_Comma_IEEE.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Formula Comma or Period</a></li>
     <li><a href="./resources/IEEE-Reference-Guide-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Reference Guide (2021)</a></li>
     <li><a href="./resources/IEEE-Editorial-Style-Manual-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editorial Style Manual (2021)</a></li>
     <li><a href="./resources/Taiwan_Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> 台灣研究者最專業的學術英文雜誌</a></li>
@@ -134,8 +135,19 @@
 
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <li>
+      <strong>Aug 2022</strong> One Paper NLNet accepted by <em>IEEE MMSP</em>
+      <iframe
+        src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
+        frameborder="0" scrolling="0" width="85px" height="20px">
+      </iframe>
+      <iframe
+        src="https://img.shields.io/github/forks/SuperBruceJia/NLNet-IQA?style=social"
+        frameborder="0" scrolling="0" width="85px" height="20px">
+      </iframe>.
+    </li>
     <li><strong>Apr 2022</strong> CV Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing. (Supervisor: Dr. Hui Zhang)</li>
-    <strong>Dec 2021</strong> <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> One Paper</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.</li>
+    <strong>Dec 2021</strong> One Paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.</li>
   <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai. (Supervisor: Dr. Shuang Zhou)</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
@@ -150,8 +162,7 @@
     </iframe>.
   </li>
   <li>
-    <strong>Feb 2020</strong> <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"> One Paper</a>
-    accepted by <em>Journal of Neural Engineering</em> 
+    <strong>Feb 2020</strong> One Paper<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"> ESI-CNNs</a> accepted by <em>Journal of Neural Engineering</em> 
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow?style=social"
       frameborder="0" scrolling="0" width="85px" height="20px">
