--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <li><a href="./resources/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide (LaTex)</a></li>
     <li><a href="./resources/Formula_Comma_IEEE.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Formula Comma or Period</a></li>
     <li><a href="./resources/IEEE-Reference-Guide-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Reference Guide (2021)</a></li>
+    <li><a href="https://woodward.library.ubc.ca/research-help/journal-abbreviations/"> <i class="fab fa fa-file-pdf-o"></i> Science and Engineering Journal Abbreviations</a></li>
     <li><a href="./resources/IEEE-Editorial-Style-Manual-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editorial Style Manual (2021)</a></li>
     <li><a href="./resources/Taiwan_Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> 台灣研究者最專業的學術英文雜誌</a></li>
     <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
