--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <br />
   <br />
   
-  My research interests mainly lie in Computer Vision. <br />
+  My research interests mainly lie in Image and Video Processing, Computer Vision, and Point Cloud Processing. <br />
   Some of my paper survey and presentations can be found
   
   <br />
