--- a/index.html
+++ b/index.html
@@ -181,7 +181,23 @@
 <!--Recent Publications-->
 <h2 id="publications">Publications</h2>
 
+
 <ol>
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">No-reference Image Quality Assessment via Non-local Dependency Modeling</font>
+    </div><br>
+    <div style="float:left;">
+      Shuyue Jia, Baoliang Chen, Dingquan Li, Shiqi Wang
+    </div>
+    <div style="float:right;">
+      <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
+    </div>
+    <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em>, 2022.
+  </li>
+  
+  <hr>
+  
   <li>
     <div style="float:left;">
       <font color="#00066f">Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition</font>
@@ -222,7 +238,6 @@
     </details>
   </li>
   
-  <!--  ####################################################################################################################################################-->
   <hr>
   
   <li>
