--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Frontiers in Bioengineering and Biotechnology</em>, 2022.
+    <em><br>Frontiers in Bioengineering and Biotechnology</em> (IF: 6.064), 2022.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -251,7 +251,7 @@
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
-    <em><br>Journal of Neural Engineering</em>, 2020.
+    <em><br>Journal of Neural Engineering</em> (IF: 5.043), 2020.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -358,7 +358,7 @@
     <div style="float:right;">
       <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Sensors &amp; Actuators: B. Chemical</em>, 2021.
+    <em><br>Sensors &amp; Actuators: B. Chemical</em> (IF: 9.221), 2021.
   </li>
   
   <hr>
