--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       display:inline-block;
       width:100%;
     }
+  
+  ul{
+    text-align:justify;  
+  }
+  
+  ul i{
+    display:inline-block;
+    width:100%;
+  }
 </style>
 
 <!--Main Information-->
@@ -204,6 +213,17 @@
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
     </div>
     <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em>, 2022.
+    <details>
+      <summary style="outline:none">See More</summary>
+      <ul>
+        A no-reference image quality assessment method based on non-local features learned by a graph neural network (GNN). The proposed quality assessment framework is rooted in the view that the human visual system perceives image quality with long-dependency constructed among different regions, inspiring us to explore the non-local interactions in quality prediction.
+        <div>
+          <div style="text-align:center">
+            <img width="99%device-width" src="./imgs/Picture5.jpg" alt="Project4">
+          </div>
+        </div>
+      </ul>
+    </details>
   </li>
   
   <hr>
