--- a/index.html
+++ b/index.html
@@ -109,24 +109,30 @@
         <li><a href="./files/Crypto-currency-Return-and-Price-Prediction-with-Machine-Learning.pdf"> <i class="fab fa fa-file-pdf-o"></i> Crypto currency Return and Price Prediction with Machine Learning</a></li>
         <li><a href="./files/PySpark-and-Horovod.pdf"> <i class="fab fa fa-file-pdf-o"></i> Big Data Parallel Processing by PySpark and Horovod Distributed Deep Learning</a></li>
         
-    <p>Other Resources</p>
-    <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua JIA</a></li>
-    <li><a href="./resources/How_to_Use_IEEEtran_LaTeX_Class.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Use the IEEEtran LaTeX Class</a></li>
-    <li><a href="./resources/IEEE-Editing-Mathematics.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editing Mathematics Guide (Standard)</a></li>
-    <li><a href="./resources/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide (LaTex)</a></li>
-    <li><a href="./resources/Formula_Comma_IEEE.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Formula Comma or Period</a></li>
-    <li><a href="./resources/IEEE-Reference-Guide-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Reference Guide (2021)</a></li>
-    <li><a href="https://woodward.library.ubc.ca/research-help/journal-abbreviations/"> <i class="fab fa fa-file-pdf-o"></i> Science and Engineering Journal Abbreviations</a></li>
-    <li><a href="https://libguides.uwf.edu/c.php?g=848362&p=6073747"> <i class="fab fa fa-file-pdf-o"></i> Standard abbreviations used in the IEEE Reference list</a></li>
-    <li><a href="./resources/IEEE-Editorial-Style-Manual-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editorial Style Manual (2021)</a></li>
-    <li><a href="./resources/IEEE_Citation_Examples.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Citation Examples</a></li>
-    <li><a href="./resources/Taiwan_Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> 台灣研究者最專業的學術英文雜誌</a></li>
-    <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
-    <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
-    <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
-    <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
-    <li><a href="./resources/清华大学各院系重要国际学术会议目录_2018.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学各院系(学科)重要国际学术会议目录 (2018)</a></li>
+      <p>Other Resources</p>
+      <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua JIA</a></li>
+      <li><a href="./resources/How_to_Use_IEEEtran_LaTeX_Class.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Use the IEEEtran LaTeX Class</a></li>
+      <li><a href="./resources/IEEE-Editing-Mathematics.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editing Mathematics Guide (Standard)</a></li>
+      <li><a href="./resources/IEEE_Math_Typesetting_Guide.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Math Typesetting Guide (LaTex)</a></li>
+      <li><a href="./resources/Formula_Comma_IEEE.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Formula Comma or Period</a></li>
+      <li><a href="./resources/IEEE-Reference-Guide-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Reference Guide (2021)</a></li>
+      <li><a href="https://woodward.library.ubc.ca/research-help/journal-abbreviations/"> <i class="fab fa fa-file-pdf-o"></i> Science and Engineering Journal Abbreviations</a></li>
+      <li><a href="https://libguides.uwf.edu/c.php?g=848362&p=6073747"> <i class="fab fa fa-file-pdf-o"></i> Standard abbreviations used in the IEEE Reference list</a></li>
+      <li><a href="./resources/IEEE-Editorial-Style-Manual-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editorial Style Manual (2021)</a></li>
+      <li><a href="./resources/IEEE_Citation_Examples.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Citation Examples</a></li>
+      <li><a href="./resources/Taiwan_Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> 台灣研究者最專業的學術英文雜誌</a></li>
+      <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
+      <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
+      <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
+      <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
+      <li><a href="./resources/清华大学各院系重要国际学术会议目录_2018.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学各院系(学科)重要国际学术会议目录 (2018)</a></li>
     
+    <p>Good Articles</p>
+    <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 学术人生: 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
+    <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html"> <i class="fab fa fa-file-pdf-o"></i> You and Your Research by Prof. Richard Hamming</a></li>
+    <li><a href="https://zhuanlan.zhihu.com/p/338193330"> <i class="fab fa fa-file-pdf-o"></i> Columbia University Ph.D. (CV Track) Summary by Prof. Mike Shou</a></li>
+
+
   </details>
   
   <br />
