--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
       <li><a href="./resources/清华大学各院系重要国际学术会议目录_2018.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学各院系(学科)重要国际学术会议目录 (2018)</a></li>
     
     <p>Good Articles</p>
-    <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 学术人生: 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
+    <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
+    <li><a href="./resources/Computer_Vision_History.pdf"> <i class="fab fa fa-file-pdf-o"></i> A Brief History of Computational Vision by Prof. Song-Chun Zhu</a></li>
     <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html"> <i class="fab fa fa-file-pdf-o"></i> You and Your Research by Prof. Richard Hamming</a></li>
     <li><a href="https://zhuanlan.zhihu.com/p/338193330"> <i class="fab fa fa-file-pdf-o"></i> Columbia University Ph.D. (CV Track) Summary by Prof. Mike Shou</a></li>
-
 
   </details>
   
